--- a/src/css/personRetail.css
+++ b/src/css/personRetail.css
@@ -20,6 +20,9 @@
   height: 80px;
   background-color: #aaa;
   margin-right: 20px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .retailCover .retailItem .RI_name {
   font-size: 18px;
