--- a/src/css/personRetail.less
+++ b/src/css/personRetail.less
@@ -21,6 +21,9 @@
       height: 80px;
       background-color: #aaa;
       margin-right: 20px;
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
     }
 
     .RI_name {
